--- a/src/App.css
+++ b/src/App.css
@@ -5,9 +5,11 @@
   height: 100%;
 }
 
+html,
 body {
   margin: 0;
   padding: 0px;
+  height: 100%;
   max-height: 100vh;
   font-family: "Roboto Slab", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -16,8 +18,8 @@ body {
 
 /* todo: -------------------- Container -------------------- */
 .main-container {
-  height: 100%;
-  min-height: 100vh;
+  height: auto;
+  min-height: 100%;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -31,14 +33,12 @@ body {
 /* todo: -------------------- Container title -------------------- */
 .main-container .text-title {
   width: 100%;
-  font-size: 1.25rem;
   color: #5b627d;
   margin-top: 2.5rem;
-  padding-bottom: 2rem;
 }
 
 .main-container .text-title h2 {
-  font-size: 4rem;
+  font-size: 6vw;
   color: white;
   font-family: var(--font-title-bold);
   text-shadow: 4px 3px 3px black;
@@ -55,6 +55,7 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-items: flex-start;
   padding-bottom: 1rem;
 }
 
@@ -64,7 +65,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: auto;
+  height: 100%;
+  width: 100%;
   max-height: 70vh;
   overflow-y: auto;
   overflow-x: hidden;
@@ -92,16 +94,18 @@ body {
   margin-right: 10px;
   height: 2rem;
   border-radius: 5px;
-  min-width: 200px;
+  min-width: 20vw;
   padding-left: 15px;
   flex: 1;
 }
 
 .main-container .content .formContainer .items {
-  text-align: center;  
+  text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 100%;
+  width: 100%;
 }
 
 .main-container .content .formContainer .items .cantidad {
@@ -136,6 +140,8 @@ body {
   padding: 10px 0;
   display: flex;
   align-items: center;
+  height: 100%;
+  width: 100%;
 }
 
 .main-container .content .formContainer .result-item {
@@ -169,16 +175,31 @@ svg {
 @media(max-width: 900px) {
 
   .main-container .text-title h2 {
-    font-size: 2.6rem;
+    font-size: 8vw;
   }
 
   .main-container .content {
     flex-direction: column;
+    align-items: center;
   }
 
   .main-container .content .formContainer {
     padding-top: 1rem;
     margin-top: 3rem;
+    padding: 0rem;
+  }
+
+  .main-container .content .formContainer .input {
+    min-width: 50vw;
+  }
+
+}
+
+
+@media(max-width: 600px) {
+
+  .main-container .text-title h2 {
+    font-size: 12vw;
   }
 
 }
