--- a/src/components/rulette.css
+++ b/src/components/rulette.css
@@ -5,10 +5,33 @@
     justify-content: center;
     align-items: center;
     height: auto;
+    max-height: 60vh;
     width: 100%;
-    max-width: 550px;
+    max-width: 60vw;
     aspect-ratio: 1;
-    margin: 0 auto;
+    margin-top: 2rem;
+    overflow-wrap: break-word;
+}
+
+#roulette-container .Wheel {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+#roulette-container .Wheel .option {
+    white-space: normal;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    text-align: center;
+    font-size: 2vw;
+    padding: 5px;
+    background-color: #000 !important;
+}
+
+#roulette-container .sc-eCssSg .hmocIu {
+    overflow-wrap: break-word;
 }
 
 #roulette-container>div {
@@ -30,7 +53,7 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    z-index: +9;
+    z-index: 9;
     border-radius: 5rem;
     width: 5rem;
     height: 5rem;
@@ -56,6 +79,10 @@
     #roulette-container {
         max-width: 80%;
         height: auto !important;
+    }
+
+    #roulette-container .btnSpin {
+        font-size: 6vw;
     }
 
 }
